--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,28 @@
-.header-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+body {
+    margin: 0;
+}
 
-    .logo {
-        height: 800px;
-        width: 800px;
+.header-section {
+    min-height: 100vh;
+    background-image: url("./images/background.png");
+    background-size: auto 100%;
+    background-position: center center;
+
+    .gradient-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.4);
+        min-height: calc(100vh - 64px);
+        padding: 32px;
+        width: calc(100% - 64px);
+
+        .logo {
+            height: 100%;
+            width: 100%;
+            max-height: 400px;
+            max-width: 400px;
+        }   
     }
 }
 
@@ -66,7 +82,7 @@
             display: flex;
             align-items: center;
             flex-direction: column;
-            width: 33.333%;
+            width: 100%;
         }
     }
 }
@@ -77,6 +93,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        flex-wrap: wrap;
     
         .sponsor {
             width: 200px;
@@ -103,5 +120,11 @@
         justify-content: center;
         align-items: center;
         margin: 0 8px;
+    }
+}
+
+@media only screen and (orientation: landscape) {
+    .header-section {
+        background-size: 100% auto;
     }
 }
