--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,29 +1,7 @@
+@import './parts/header.scss';
+
 body {
     margin: 0;
-}
-
-.header-section {
-    min-height: 100vh;
-    background-image: url("./images/background.png");
-    background-size: auto 100%;
-    background-position: center center;
-
-    .gradient-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 0.4);
-        min-height: calc(100vh - 64px);
-        padding: 32px;
-        width: calc(100% - 64px);
-
-        .logo {
-            height: 100%;
-            width: 100%;
-            max-height: 400px;
-            max-width: 400px;
-        }   
-    }
 }
 
 .eva-section, .tom-section, .news-section {
