Add contact section.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import './parts/header.scss';
 @import './parts/team.scss';
 @import './parts/sponsors.scss';
+@import './parts/socials.scss';
 
 body {
     margin: 0;
@@ -42,22 +43,6 @@ body {
 .section-title {
     text-align: center;
     font-size: 64px;
-}
-
-.socials-section .socials-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-    .social {
-        width: 200px;
-        height: 50px;
-        border: solid 2px black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 8px;
-    }
 }
 
 @media only screen and (orientation: landscape) {
