--- a/src/styles/parts/news.scss
+++ b/src/styles/parts/news.scss
@@ -5,12 +5,7 @@
     .odd-news-container .news-item , .even-news-container .news-item {
         width: calc(100% - 16px);
         padding: 8px;
-        height: 150px;
-
-        &.hide {
-            height: 88px;
-        }
-
+        max-width: 400px;
         .dot {
             display: none;
         }
@@ -36,6 +31,10 @@
 
     .odd-news-container {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
     }
 
     .even-news-container {
@@ -49,20 +48,22 @@
         .odd-news-container, .even-news-container {
             width: calc(50% - 18px);
             .news-item {
-                max-width: 500px;
+                width: 318px;
+                height: 150px;
+                max-width: 318px;
                 .dot {
                     display: block;
                     width: 24px;
                     height: 24px;
+                    min-width: 24px;
                     background: black;
                     border-radius: 50%;
                     position: relative;
                 }
 
-
-
                 &.hide {
                     visibility: hidden;
+                    height: 88px;
                 }
             }
         }
@@ -101,10 +102,13 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                justify-content: space-between;
 
                 .dot {
                     left: -22px;
+                }
+
+                .content {
+                    padding-left: 64px;
                 }
             }
         }
@@ -113,6 +117,31 @@
 
 @media only screen and (min-width: 1024px) {
     .news-section .news-container {
-        margin: 0 128px;
+        margin: 0 48px;
+        .odd-news-container, .even-news-container {
+            .news-item {
+                width: 432px;
+                max-width: 432px;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .news-section .news-container {
+        margin: 0 72px;
+        .odd-news-container, .even-news-container {
+            .news-item {
+                width: 520px;
+                max-width: 520px;
+            }
+        }
+
+        .even-news-container .news-item {
+            padding-right: 0;
+            .content {
+                padding-left: 72px;
+            }
+        }
     }
 }
