--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 @import './parts/team.scss';
 @import './parts/sponsors.scss';
 @import './parts/socials.scss';
-@import './parts/news.scss';
+@import './parts/progress.scss';
 @import './parts/cansat-section.scss';
 
 body {
