--- a/src/styles/parts/progress.scss
+++ b/src/styles/parts/progress.scss
@@ -22,6 +22,9 @@
 
         .item-text {
             margin: 0 0 6px 0;
+            a {
+                color: black;
+            }
         }
 
         .item-link {
