--- a/src/styles/parts/team.scss
+++ b/src/styles/parts/team.scss
@@ -15,6 +15,7 @@
             align-items: center;
             flex-direction: column;
             margin: 32px;
+            width: 256px;
 
             .member-profile {
                 width: 200px;
@@ -25,7 +26,7 @@
 
             .member-name {
                 margin: 0;
-                font-size: 32px;
+                font-size: 28px;
             }
 
             .member-position {
@@ -37,6 +38,17 @@
                 color: black;
                 font-size: 18px;
             }
+        }
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .team-section .members-container .team-member {
+        width: 230px;
+
+        .member-email {
+            color: black;
+            font-size: 15px;
         }
     }
 }
