Add transition to progress.

--- a/src/styles/parts/progress.scss
+++ b/src/styles/parts/progress.scss
@@ -54,6 +54,8 @@
                 width: 318px;
                 height: 150px;
                 max-width: 318px;
+                opacity: 0;
+
                 .dot {
                     display: block;
                     width: 24px;
@@ -67,6 +69,11 @@
                 &.hide {
                     visibility: hidden;
                     height: 88px;
+                }
+
+                &.show {
+                    transition: 1500ms opacity ease;
+                    opacity: 1;
                 }
             }
         }
