Add missing progress dates.

--- a/src/styles/parts/cansat-section.scss
+++ b/src/styles/parts/cansat-section.scss
@@ -78,6 +78,10 @@
             font-size: 18px;
             line-height: 30px;
 
+            .link {
+                color: black;
+            }
+
             .bold {
                 font-weight: bold;
             }
