Add missing sponsors.

--- a/src/styles/parts/sponsors.scss
+++ b/src/styles/parts/sponsors.scss
@@ -32,6 +32,22 @@
             &.radio-shop, &.radio-shop .logo {
                 height: 48px;
             }
+
+            &.gradient, &.gradient .logo {
+                height: 110px;
+            }
+
+            &.p-one-team, &.p-one-team .logo {
+                height: 110px;
+            }
+
+            &.infinity-pv, &.infinity-pv .logo {
+                height: 96px;
+            }
+
+            &.trivox, &.trivox .logo {
+                height: 36px;
+            }
         }
     }
 
