--- a/src/styles/parts/header.scss
+++ b/src/styles/parts/header.scss
@@ -1,8 +1,9 @@
 .header-section {
     min-height: 100vh;
-    background-image: url("../../images/background.png");
-    background-size: auto 100%;
+    background-image: url("../../images/background.jpg");
     background-position: center center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
 
     .gradient-container {
         display: flex;
