--- a/src/styles/parts/cansat-section.scss
+++ b/src/styles/parts/cansat-section.scss
@@ -107,3 +107,72 @@
         }
     }
 }
+
+.slider {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.slider-wrapper {
+	width: 9999px;
+    height: 100vh;
+	position: relative;
+	transition: left 400ms linear;
+}
+
+.slide {
+    float: left;
+    width: 100%;
+    height: 100vh;
+	position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.slide img {
+	position: absolute;
+	top: 0;
+    left: 0;
+    height: 100vh;
+}
+
+.caption {
+	margin: 0;
+	position: absolute;
+	z-index: 100;
+	bottom: -2em;
+	left: 0;
+	width: 100%;
+	height: 2em;
+	line-height: 2;
+	text-align: center;
+	background: rgba( 0, 0, 0, 0.6 );
+	color: #fff;
+	transition: bottom 500ms ease-in;
+}
+
+.caption.visible {
+	bottom: 0;
+}
+
+.slider-nav {
+	margin: 1em 0;
+    text-align: center;
+}
+
+.slider-nav a {
+	width: 2em;
+	height: 2em;
+	border: 1px solid #ccc;
+	text-align: center;
+	text-decoration: none;
+	color: #000;
+	display: inline-block;
+	line-height: 2;
+    margin-right: 0.5em;
+}
+
+.slider-nav a.current {
+	border-color: #000;
+}
