Add articles section template.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import './parts/sponsors.scss';
 @import './parts/socials.scss';
 @import './parts/progress.scss';
+@import './parts/articles.scss';
 @import './parts/cansat-section.scss';
 
 body {
