Redesign TOM section.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './parts/progress.scss';
 @import './parts/articles.scss';
 @import './parts/cansat-section.scss';
+@import './parts/slideshow.scss';
 
 body {
     margin: 0;
