--- a/src/styles/parts/progress.scss
+++ b/src/styles/parts/progress.scss
@@ -1,47 +1,54 @@
-.progress-section .progress-container {
-    display: flex;
-    flex-direction: row;
-
-    .odd-progress-container .progress-item , .even-progress-container .progress-item {
-        width: calc(100% - 16px);
-        padding: 8px;
-        max-width: 400px;
-        .dot {
-            display: none;
-        }
-
-        .item-title {
-            font-size: 24px;
-            margin: 0;
-        }
-
-        .item-date {
-            font-size: 18px;
-            margin: 8px 0;
-        }
-
-        .item-text {
-            margin: 0 0 6px 0;
-            a {
+.progress-section {
+    .section-title {
+        margin: 0;
+        padding: 32px 0;
+    }
+    
+    .progress-container {
+        display: flex;
+        flex-direction: row;
+    
+        .odd-progress-container .progress-item , .even-progress-container .progress-item {
+            width: calc(100% - 16px);
+            padding: 8px;
+            max-width: 400px;
+            .dot {
+                display: none;
+            }
+    
+            .item-title {
+                font-size: 24px;
+                margin: 0;
+            }
+    
+            .item-date {
+                font-size: 18px;
+                margin: 8px 0;
+            }
+    
+            .item-text {
+                margin: 0 0 6px 0;
+                a {
+                    color: black;
+                }
+            }
+    
+            .item-link {
                 color: black;
             }
         }
-
-        .item-link {
-            color: black;
+    
+        .odd-progress-container {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            align-items: center;
         }
-    }
-
-    .odd-progress-container {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
-    }
-
-    .even-progress-container {
-        display: none;
+    
+        .even-progress-container {
+            display: none;
+        }
     }
 }
 
