--- a/src/styles/parts/slideshow.scss
+++ b/src/styles/parts/slideshow.scss
@@ -4,9 +4,10 @@
     justify-content: center;
     height: 100vh;
 
-    .section-title {
+    .title-container .section-title {
         margin: 0;
         padding: 32px 0;
+        border-radius: 16px;
     }
 
     .slideshow {
@@ -45,6 +46,7 @@
         align-items: center;
 
         .text-background {
+            border-radius: 16px;
             padding: 0 16px;
 
             .link {
@@ -77,6 +79,7 @@
 
 @media only screen and (min-width: 768px) {
     .cansat-section.slideshow-section .title-container .section-title {
+        padding-bottom: 12px;
         width: 250px;
     }
 
