Add T-CZ partner.

--- a/src/styles/parts/sponsors.scss
+++ b/src/styles/parts/sponsors.scss
@@ -60,6 +60,10 @@
             &.fzu, &.fzu .logo {
                 height: 96px;
             }
+
+            &.t-cz, &.t-cz .logo {
+                height: 64px;
+            }
         }
     }
 
