Add SAB Aerospace sponsor.

--- a/src/styles/parts/sponsors.scss
+++ b/src/styles/parts/sponsors.scss
@@ -64,6 +64,10 @@
             &.t-cz, &.t-cz .logo {
                 height: 64px;
             }
+
+            &.sab-aerospace, &.sab-aerospace .logo {
+                height: 64px;
+            }
         }
     }
 
